--- a/MvcCoreEfProcedures/Views/Shared/_Layout.cshtml
+++ b/MvcCoreEfProcedures/Views/Shared/_Layout.cshtml
@@ -28,6 +28,11 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="EmpleadosVista" asp-action="Index">Empleado Vista</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area=""
+                            asp-controller="Trabajadores" 
+                            asp-action="TrabajadoresOficio">Trabajadores Oficio</a>
+                        </li>
                     </ul>
                 </div>
             </div>
